static/css/style.css
/* @import url('https://fonts.googleapis.com/css?family=Montserrat:500');
@import url('https://fonts.googleapis.com/css?family=Merienda'); */
@import url('https://fonts.googleapis.com/css?family=Montserrat|Merienda');

.hidden {
    display: none;
}

.disabled {
    color: grey;
}

.body {
    font-family: 'Montserrat', sans-serif;
    font-size: 18px;
    background: red;
}

a.brand-logo {
    font-family: 'Merienda', cursive;
    font-size: 35px;
    margin-left: 30px;
    color: #fec;
}

a.brand-logo:hover {
    text-decoration: none;
    color: #ff568a;
    font-weight: 900;
    text-shadow: 0px 2px 5px #0b136f;
}

nav {
    background-color: #484538;
    /* background-color: #2869a0; */
}

nav a {
    color: #fec;
}

ul#wide-menu li a {
    color: #fec;
    font-size: 1.2em;
    text-decoration: none;
}

ul#wide-menu li a:hover {
    color: #ff568a;
    font-size: 1.2em;
    text-decoration: none;
    text-shadow: 0px 2px 5px #0b136f;
}

.side-nav li a {
    color: #ff568a;
    font-size: 1.5em;
    text-decoration: none;
}

a.button-collapse i:hover {
    color: #ff568a;
    text-shadow: 0px 2px 5px #0b136f;
}


.row>.col.info {
    /* border: 1px solid #cedfd9; */
    padding: 10px;
    /* margin: 1px; */
    box-sizing: border-box;
}

@media screen and (min-width: 770px) {
    .row>.col.info {
        padding: 30px;
    }
}

@media screen and (min-width: 1000px) {
    .row>.col.info {
        padding: 30px 50px;
    }
}


.panel-body {
    padding: 15px;
    width: 100%;
    position: relative;
}

.panel {
    border: 0;
    box-shadow: none;
}

.panel-group {
    background: #fff none repeat scroll 0 0;
    border-radius: 3px;
    box-shadow: 0 5px 30px 0 rgba(0, 0, 0, 0.04);
    margin-bottom: 0;
    padding: 2px;

}

@media screen and (min-width: 600px) {
    .panel-group {
        padding: 10px;
    }
}

@media screen and (min-width: 725px) {
    .panel-group {
        padding: 30px;
    }
}

.panel-primary>.panel-heading+.panel-collapse>.panel-body {
    border: 0;
    background-color: #b09398;
    border-radius: 20px;
    /* background-color: #6abfa829; */
}


#accordion .panel-heading {
    border-radius: 30px;
    background:  #5f5449;
}

#accordion .panel-heading:hover {
    background: #f6e4f6;
    color: #46494c;
    border: 1px solid #f6bdd1;

}

.panel-heading.active {
    border: 1px solid #5f5449;
    background-color: #9b6a6c;
    box-shadow: 0 3px 5px #9b6a6c, 0 0 20px #e8e8e8 inset;
    /* border: 1px solid #337ab7;
    background-color: #5da7e6;
    box-shadow: 0 3px 5px #5da7e6; */
    color: #ffe064;
}


/* Cards Set Up - START */
.flip3D {
    width: 100%;
    height: 200px;
}

.card {
    position: absolute; /* We need to stack the divs [back and front (on top)] */
    width: calc(100% - 30px);
    height: 200px;
    padding: 10px;
    box-sizing: border-box;
    border-radius: 5px;
    backface-visibility: hidden; /* Do not show the content from the back */
    overflow: scroll;
}
.cardContent {
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
}

.cardItem {
    flex: 1;
    min-width: 150px;
}

.card-button {
    display: flex;
    flex-direction: column;
}

.btnGroup1 {
    padding: 5px;
    display: flex;
    justify-content: space-around;
}

.btnGroup2 {
    padding: 5px;
    display: flex;
    justify-content: center;
}

.btnEdit, .btnAdd {
    color: #212529;
    font-size: 1.2em;
    background-color: #7cc;
    border-color: #5bc2c2;
    border-radius: 18px;
    padding: 3px 20px;
}

.btnDelete {
    color: #3bff56;
    font-size: 1.2em;
    background-color: #F44336;
    border-color: #de362a;
    border-radius: 18px;
    padding: 3px 20px;
}

.btnFlip {
    color: #212529;
    background-color: #fdd22d;
    border-color: #ceac2a;
    border-radius: 18px;
    padding: 5px 20px;
}

.btnCancel {
    color: #ffffff;
    font-size: 1.2em;
    background-color: rgb(90, 90, 90);
    border-color: #353535;
    border-radius: 18px;
    padding: 3px 20px;
}

.flip3D > .front {
    /* background-color: #c0de87; */
    background: #cedfd9;
    color: #5f5449;
    font-weight: 700;
    border: 0;
    box-shadow: 0 0 50px 0px #ebfcfb inset, 0 0 1px 0 #5f5449;
    -webkit-transform: perspective(1000px) rotateY(0deg);       /* Ch <36, Saf 5.1+, iOS < 9.2, An =<4.4.4 */
        -ms-transform: perspective(1000px) rotateY(0deg);       /* IE 9 */
            transform: /* Start State for front */              /* IE 10, Fx 16+, Op 12.1+ */
                       perspective(1000px) /* perspective need to be high so that it is not warped */
                       rotateY(0deg); /* card face forward by default */
}

.flip3D::after {
    font-family: fontawesome;
    font-size: 30px;
    content: "\f064";
    color: #ceaf31;
    height: 0px;
    /* width: 25px; */
    width: 0px;
    position: absolute;
    top: 0px;
    right: 15px;
    transform: rotate(50deg);
}

.flip3D > .back {
    /* background-color: #d9f3a8;
    border: 5px solid #c0de87; */
    background: #ebfcfb;
    border: 5px solid #cedfd9;
    color: #5f5449;
    font-weight: 700;
    box-shadow: 0 0 1px 0px #b09398 inset, 0 0 15px 2px #e8e8e8 inset, 0 0 2px 0 #5f5449;
    -webkit-transform: perspective(1000px) rotateY(180deg);     /* Ch <36, Saf 5.1+, iOS < 9.2, An =<4.4.4 */
        -ms-transform: perspective(1000px) rotateY(180deg);     /* IE 9 */
            transform: /* Start State for back */               /* IE 10, Fx 16+, Op 12.1+ */
                       perspective(1000px) /* perspective need to be high so that it is not warped */
                       rotateY(180deg); /* card face forward by default */
}

.flip3D > .transparentFront {
    -webkit-transform: perspective(1000px) rotateY(0deg);       /* Ch <36, Saf 5.1+, iOS < 9.2, An =<4.4.4 */
        -ms-transform: perspective(1000px) rotateY(0deg);       /* IE 9 */
            transform: /* Start State for transparent front */  /* IE 10, Fx 16+, Op 12.1+ */
                       perspective(1000px) /* perspective need to be high so that it is not warped */
                       rotateY(0deg); /* card face forward by default */
}

.flip3D > .transparentBack {
    -webkit-transform: perspective(1000px) rotateY(180deg);     /* Ch <36, Saf 5.1+, iOS < 9.2, An =<4.4.4 */
        -ms-transform: perspective(1000px) rotateY(180deg);     /* IE 9 */
            transform: /* Start State for transparent back */   /* IE 10, Fx 16+, Op 12.1+ */
                       perspective(1000px) /* perspective need to be high so that it is not warped */
                       rotateY(180deg); /* card face forward by default */
}
/* Cards Set Up - END */

/* Cards Animation duration - START */
.slow {
    transition: -webkit-transform 0.5s linear 0s;   /* controls animation */
    transition: -ms-transform 0.5s linear 0s;       /* controls animation */
    transition: transform 0.5s linear 0s;           /* controls animation */
}
/* Cards Animation duration - END */

.input-field label {
    color: #ff568a;
    font-size: 1em;
}

#linkToClassCreate {
    margin-left: 39px;
    color: #ff568a;
}

#linkToClassCreate a {
    font-size: 1.1em;
}

#linkToClassCreate a:hover {
    text-decoration: none;
    color: #ff568a;
    font-size: 1.1em;
    text-transform: uppercase;
    font-weight: 700;
    /* text-shadow: 0px 0px 10px #0b136f; */
    border: 1px solid #e4d4b0;
    border-radius: 15px;
    padding: 3px 10px;
    background-color: #fec;
}

.classes {
    position: relative;
    max-height: 100vh;
    width: 90%;
    margin: auto;
    padding: 5px;
    border: 1px solid #c9dcff;
    background-color: #ecfdb7;
    font-size: 1.5em;
    box-shadow: 0px 0px 5px #c9dcff;
}

.classes>ul>li {
    border-bottom: 1px solid #e8d4d4;
    border-radius: 30px/3px;
    font-size: 0.7em;
}

.classList {
    color: red;
    text-shadow: -2px 0px 3px #0b136f;
    font-size: 0.7em;
    margin: 0 5px;
    
}

.delClass {
    position: absolute;
    right: 5px;
}


@media screen and (min-width: 600px) {
    .classes>ul>li {
        border-bottom: 1px solid #e8d4d4;
        border-radius: 30px/3px;
        font-size: 1em;
    }
}

.framed {
    border: 1px solid red;
    border-radius: 7px;
    padding: 20px;
}

.framed .row {
    margin: 30px 20px 20px 20px;
}

.row .warning {
    color: red;
    text-align: center;
    font-size: 2em;
    margin: 30px 10px;
    margin-top: 50px;
    display: inline-block;
    border: 1px solid black;
}

h2.warning {
    color: red;
    text-shadow: 0px 0px 10px #bcff04;
    text-align: center;
}

p.redwarning {
    color:red;
    font-size: 1.2em;
    background-color: rgb(0, 255, 242);
    text-align: center;
}

p.wayout {
    color:rgb(1, 73, 1);
    font-size: 1.2em;
    background-color: rgb(205, 165, 226);
    text-align: center;
}

td a:hover {
    text-decoration: none;
}

thead {
    border-bottom: 2px solid #3e442b;
    margin-bottom: 20px;
    padding: 50px;
}

thead tr {
    background: #5f5449;
    padding: 7px 0;
    border-radius: 3px;
    box-shadow: 0 3px 5px #9b6a6c, 0 0 20px #e8e8e8 inset;
    color: #ffe064;
    /* margin-bottom: 10px; */
}

thead tr th {
    padding: 5px 7px;
    /* padding-left: 7px; */
}

.table-striped td {
    padding: 5px 7px;
    /* padding-left: 7px; */
}

.table-striped>tbody>tr:nth-of-type(odd) {
    background: #cedfd9;
}

.table-striped>tbody>tr:nth-of-type(even) {
    background: #ebfcfb;
}

/* .table-striped>tbody>tr>td>button { */
.table-striped>tbody>tr>td>a>button {
    color: #212529;
    background-color: #fdd22d;
    border-color: #ceac2a;
    border-radius: 18px;
    padding: 0px 20px;
    margin: 5px 0;
    outline: none;
}

/* .table-striped>tbody>tr>td>button:hover { */
.table-striped>tbody>tr>td>a>button:hover {
    background-color: #e5d0cc;
    border-color: #ceac2a;
    box-shadow: 0 0 3px #c0d8e0 inset;
    outline: none;
}

/* .table-striped>tbody>tr>td>button:active { */
.table-striped>tbody>tr>td>a>button:active, .table-striped>tbody>tr>td>a:active {
    background-color: #e5d0cc;
    border-color: #ceac2a;
    /* box-shadow: 0 0 3px #c0d8e0 inset;  */
    outline: none;
}

/* .table-striped>tbody>tr>td>button:hover a { */
.table-striped>tbody>tr>td>a:hover button {
    font-weight: 700;
}

/* .table-striped>tbody>tr>td>button>a { */
.table-striped>tbody>tr>td>a:focus, .table-striped>tbody>tr>td>a:active {
    outline: none;
    text-decoration: none;
}


/* MODAL */
.modal-content {
    position: relative;
    margin: 40px auto;
    border-radius: 2px;
    border: 0;
    box-shadow: 0 2px 7px -2px rgba(0,0,0,0.5);
}

.modal-content::before,
.modal-content::after {
    content: '';
    position: absolute;
    bottom: 10px;
    width: 40%;
    height: 20%;
    z-index: -1;
}

.modal-content::before {
    transition: all 0.15s ease-in-out;
    left: 20px;
    -webkit-transform: skew(-5deg) rotate(-5deg);
        -ms-transform: skew(-5deg) rotate(-5deg);
            transform: skew(-5deg) rotate(-5deg);
    box-shadow: 0 7px 15px 0 rgba(0,0,0,0.6),
                5px 15px 30px 0 rgba(0,0,0,0.4);
}

.modal-content::after {
    transition: all 0.25s ease-in-out;
    right: 15px;
    -webkit-transform: skew(5deg) rotate(5deg);
        -ms-transform: skew(5deg) rotate(5deg);
            transform: skew(5deg) rotate(5deg);
    box-shadow: 0 10px 15px 0 rgba(0,0,0,0.6),
                -5px 20px 30px 0 rgba(0,0,0,0.4);
}

.modal-content:hover::before{
    left: 2px;
    -webkit-transform: skew(-2deg) rotate(-2deg) translateY(5px);
        -ms-transform: skew(-2deg) rotate(-2deg) translateY(5px);
            transform: skew(-2deg) rotate(-2deg) translateY(5px);
    box-shadow: 0px 4px 4px 0 rgba(0,0,0,0.5);
}

.modal-content:hover::after{
    right: 2px;
    -webkit-transform: skew(2deg) rotate(2deg) translateY(5px);
        -ms-transform: skew(2deg) rotate(2deg) translateY(5px);
            transform: skew(2deg) rotate(2deg) translateY(5px);
    box-shadow: 0px 5px 5px 0 rgba(0,0,0,0.5);
}

